--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -101,7 +101,7 @@ jobs:
           distribution: 'adopt'
       - name: Check JVM
         if: matrix.os != 'windows-latest'
-        run: ./gradlew jvmTest
+        run: ./gradlew jvmTest --stacktrace --debug
       - name: Check JVM (Windows)
         if: matrix.os == 'windows-latest'
         shell: msys2 {0}
