--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -114,6 +114,8 @@ jobs:
         with:
           java-version: 21
           distribution: 'adopt'
+      - name: Make gradlew executable
+        run: chmod +x gradlew
       - name: Check JVM
         if: matrix.os != 'windows-latest'
         run: ./gradlew jvmTest --stacktrace --debug
