--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.parallel = true
 
 # kotlin
 kotlin.code.style = official
+kotlin.version = 2.1.0
 kotlin.native.ignoreDisabledTargets = true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.cacheKind.macosArm64=none
