Fix CI: Bust Gradle cache to eliminate poisoned artifacts

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -58,8 +58,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.gradle
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-gradle-
+          key: ${{ runner.os }}-gradle-v2-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-v2-
       - name: Android environment
         if: matrix.os == 'ubuntu-latest'
         shell: bash
